--- a/_posts/2015-05-06-markdown.md
+++ b/_posts/2015-05-06-markdown.md
@@ -7,5 +7,11 @@ category: notes
 permalink: notes/markdown
 ---
 
+## Syntax
+- [Official Markdown Spec](http://daringfireball.net/projects/markdown/)
+- [Printable Markdown Cheatsheet](http://packetlife.net/media/library/16/Markdown.pdf)
+- [Markdown Cheatsheet](https://github.com/adam-p/markdown-here/wiki/Markdown-Cheatsheet)
+- [GitHub Flavored Markdown](https://help.github.com/articles/github-flavored-markdown)
+
 ## Tools
 - [HTML to Markdown converter](http://heckyesmarkdown.com/)
