edit markdown, new bash shell note, fix ui for mobile

--- a/_posts/2015-05-06-markdown.md
+++ b/_posts/2015-05-06-markdown.md
@@ -2,7 +2,7 @@
 layout: post
 title: Markdown
 description: A collection of everything about markdown
-tags: [markdown, md]
+tags: [markdown, md, syntax]
 category: notes
 permalink: notes/markdown
 ---
