write some drafts

--- a/_posts/2015-05-06-markdown.md
+++ b/_posts/2015-05-06-markdown.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: Markdown
-description: A collection of everything about markdown
+description: Markdown collection such as syntax sheet, tools
 tags: [markdown, md, syntax]
 category: notes
 permalink: notes/markdown
