update permalink following Jekyll

--- a/_posts/2015-05-25-tdd-katas.md
+++ b/_posts/2015-05-25-tdd-katas.md
@@ -4,7 +4,7 @@ title: Learning TDD with Kata
 description: Practice Test-Driven Development by Katas
 tags: [tdd, test, development, kata]
 category: notes
-permalink: notes/tdd-katas
+permalink: notes/tdd-katas/
 ---
 
 ## Introduction
