--- a/_posts/2015-06-08-debian.md
+++ b/_posts/2015-06-08-debian.md
@@ -3,7 +3,7 @@ layout: post
 title: Debian
 description: Debian knowledge collection
 category: notes
-permalink: notes/debian
+permalink: notes/debian/
 ---
 
 ## Interesting Books
