--- a/_posts/2015-09-10-android.md
+++ b/_posts/2015-09-10-android.md
@@ -3,7 +3,7 @@ layout: post
 description: Android Development such as tools, tutorial and best practices
 tags: [android]
 category: notes
-permalink: notes/android
+permalink: notes/android/
 ---
 
 ## Free Learning
