--- a/_posts/2015-09-14-jekyll.md
+++ b/_posts/2015-09-14-jekyll.md
@@ -3,7 +3,7 @@ layout: post
 description: Everything about Jekyll
 tags: [jekyll, liquid, template, markup]
 category: notes
-permalink: notes/jekyll
+permalink: notes/jekyll/
 ---
 
 ## Jekyll
