--- a/_posts/2015-09-18-vim.md
+++ b/_posts/2015-09-18-vim.md
@@ -3,7 +3,7 @@ layout: post
 description: All around Vim
 tags: [vim]
 category: notes
-permalink: notes/vim
+permalink: notes/vim/
 ---
 
 ## [Vim Cheat Sheet](http://vim.rtorr.com/)
