--- a/_posts/2015-05-06-markdown.md
+++ b/_posts/2015-05-06-markdown.md
@@ -4,7 +4,7 @@ title: Markdown
 description: Markdown collection such as syntax sheet, tools
 tags: [markdown, md, syntax]
 category: notes
-permalink: notes/markdown
+permalink: notes/markdown/
 ---
 
 ## Syntax
