fix theme & change fonts

--- a/_posts/2016-06-15-docker.md
+++ b/_posts/2016-06-15-docker.md
@@ -8,7 +8,7 @@ permalink: notes/docker/
 featured_image: logo/docker.png
 ---
 
-# Useful Resources
+## Useful Resources
 - [Awesome Docker](https://github.com/veggiemonk/awesome-docker) is a collection of everthing about Docker. It's suitable for all users.
 - [Docker Cheat Sheet](https://github.com/wsargent/docker-cheat-sheet) is how to use Docker in a shorten way
 
