--- a/_posts/2016-06-15-docker.md
+++ b/_posts/2016-06-15-docker.md
@@ -16,7 +16,7 @@ featured_image: logo/docker.png
 - [A simple Docker UI](https://github.com/kevana/ui-for-docker) for managing docker images and containers
 
   ```
-  docker run -d -p 9000:9000 --privileged -v /var/run/docker.sock:/var/run/docker.sock uifd/ui-for-docker
+  docker run -d -p 9000:9000 --privileged --name=docker-ui -v /var/run/docker.sock:/var/run/docker.sock uifd/ui-for-docker
   ```
 - [A monitoring Docker containers tools](https://github.com/google/cadvisor) by Google
 
