add syntax highlighter

--- a/src/_posts/2016-06-15-docker.md
+++ b/src/_posts/2016-06-15-docker.md
@@ -15,11 +15,11 @@ featured_image: logo/docker.png
 ## Tools
 - [A simple Docker UI](https://github.com/kevana/ui-for-docker) for managing docker images and containers
 
-  ```
+  ```bash
   docker run -d -p 9000:9000 --privileged --name=docker-ui -v /var/run/docker.sock:/var/run/docker.sock uifd/ui-for-docker
   ```
 - [A monitoring Docker containers tools](https://github.com/google/cadvisor) by Google
 
-  ```
+  ```bash
   docker run --volume=/:/rootfs:ro --volume=/var/run:/var/run:rw --volume=/sys:/sys:ro --volume=/var/lib/docker/:/var/lib/docker:ro --publish=8080:8080 --detach=true --name=cadvisor google/cadvisor:latest
   ```
